--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,7 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# AWS deployment artifacts
+.cloudfront-distribution-id
+.acm-certificate-arn
